--- a/front-end/src/app/app.component.html
+++ b/front-end/src/app/app.component.html
@@ -4,23 +4,26 @@
             <a class="navbar-brand" [routerLink]="['/']">
                 Quotidian
             </a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
-                data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
-                aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
 
-            <div id="navbarSupportedContent" class="collapse navbar-collapse">
-                <div class="me-auto mb-2 mb-lg-0"></div>
-                <ul class="navbar-nav d-flex">
-                    <li class="nav-item">
-                        <a class="nav-link" [routerLink]="['/']">Accueil</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" [routerLink]="['/profile']">Profil</a>
-                    </li>
-                </ul>
-            </div>
+            @if(user) {
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+                    data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
+                    aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+
+                <div id="navbarSupportedContent" class="collapse navbar-collapse">
+                    <div class="me-auto mb-2 mb-lg-0"></div>
+                    <ul class="navbar-nav d-flex">
+                        <li class="nav-item">
+                            <a class="nav-link" [routerLink]="['/']">Accueil</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" [routerLink]="['/profile']">Profil</a>
+                        </li>
+                    </ul>
+                </div>
+            }
         </div>
     </nav>
 </header>
