--- a/frontend/src/app/_components/login/login.component.css
+++ b/frontend/src/app/_components/login/login.component.css
@@ -14,6 +14,18 @@
 	margin-bottom: 15px;
 }
 
+.loading {
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	text-align: center;
+	margin: 30px 20px;
+}
+
+.loading div {
+	margin-bottom: 10px;
+}
+
 @media(max-width:768px) {
 	#title {
 		margin-top: 20px;
