--- a/frontend/src/app/_components/login/login.component.html
+++ b/frontend/src/app/_components/login/login.component.html
@@ -8,6 +8,14 @@
 				<div class="card-header bg-primary text-white text-center">
 					Connexion
 				</div>
+				@if(loading) {
+				<div class="loading">
+					<div class="spinner-border text-primary" role="status">
+						<span class="visually-hidden">Loading...</span>
+					</div>
+					<span>Connexion...</span>
+				</div>
+				} @else {
 				<form class="card-body" [formGroup]="form" (submit)="onSubmit()">
 					@if(error) {
 					<div class="alert alert-danger">
@@ -51,6 +59,7 @@
 					</div>
 					<button type="submit" class="btn btn-primary">Se connecter</button>
 				</form>
+				}
 			</div>
 		</section>
 	</div>
