--- a/frontend/src/app/_components/home/home.component.css
+++ b/frontend/src/app/_components/home/home.component.css
@@ -5,7 +5,7 @@
 #google {
 	display: block;
 	width: 500px;
-	margin: 80px auto;
+	margin: 80px auto 0;
 	text-align: center;
 }
 
@@ -21,8 +21,8 @@
 #google .search {
 	display: flex;
 	min-height: 50px;
-	background: #898d93;
-	border: 1px solid transparent;
+	background-color: #f5f5f5;
+	border: 1px solid #c1c4c9;
 	border-radius: 26px;
 	margin: 0 auto;
 }
@@ -35,11 +35,11 @@
 	width: 1%;
 	min-width: 0;
 	padding: 0px 20px;
-	color: #fff;
+	color: #000;
 }
 
 #google .search input::placeholder {
-	color: #dcdfe3;
+	color: #72777d;
 	opacity: 1;
 }
 
@@ -51,8 +51,28 @@
 #google .search button {
 	background-color: transparent;
 	border: none;
-	color: #dcdfe3;
+	color: #72777d;
 	padding: 0 20px;
+}
+
+#chat-gpt {
+	display: block;
+	width: 500px;
+	margin: 20px auto 80px;
+	text-align: center;
+}
+
+#chat-gpt button {
+	background-color: #91959d;
+	min-height: 50px;
+	padding: 0 20px;
+	border-radius: 26px;
+	border: none;
+	color: #f5f5f5;
+}
+
+#chat-gpt button:hover {
+	background-color: #6d7179;
 }
 
 .fas {
