--- a/frontend/src/app/_components/home/home.component.html
+++ b/frontend/src/app/_components/home/home.component.html
@@ -13,6 +13,12 @@
 		</form>
 	</section>
 
+	<section id="chat-gpt">
+		<button onclick="window.open('https://chat.openai.com/', '_blank')">
+			Start ChatGPT Conversation
+		</button>
+	</section>
+
 	<div class="row">
 		<section class="col-md-12">
 			<div id="topList" class="row">
